failed to add two features
play when enter pip
pause when leave pip

--- a/options.html
+++ b/options.html
@@ -17,8 +17,16 @@
         <input type="number" id="volume" name="volume" min="1" value="5" style="width: 3rem;text-align: center;"><label>
           %</label>
       </div>
+      <!-- <div style="margin: 1rem;">
+        <label for="auto">play video right after entering pip: </label>
+        <input type="checkbox" id="auto" name="auto">
+      </div>
       <div style="margin: 1rem;">
-        <label for="play">use up/down as play: </label>
+        <label for="pause">pause video after leaving pip: </label>
+        <input type="checkbox" id="pause" name="pause">
+      </div> -->
+      <div style="margin: 1rem;">
+        <label for="play">use up/down as play button: </label>
         <input type="checkbox" id="play" name="play">
       </div>
       <div style="margin: 1rem;">
