--- a/options.html
+++ b/options.html
@@ -26,7 +26,7 @@
         <input type="checkbox" id="pause" name="pause">
       </div> -->
       <div style="margin: 1rem;">
-        <label for="play">use up/down as play button: </label>
+        <label for="play">use up/down as play/pause button: </label>
         <input type="checkbox" id="play" name="play">
       </div>
       <div style="margin: 1rem;">
