add shortcut link

--- a/options.html
+++ b/options.html
@@ -33,6 +33,10 @@
         <label for="list">keep in pip when play list: </label>
         <input type="checkbox" id="list" name="list">
       </div>
+
+      <div style="margin: 1rem;">
+        <button id='shortcut'>shortcut settings</button>
+      </div>
     </div>
     <div style="flex: 0 0 auto; align-items: flex-end; display: flex;">
       <input type="button" id="ok" value="ok" style="margin: 1rem; width: 5rem; height: 3rem;">
