fix bug : store/load settings
also opt saving UI

--- a/package/options.html
+++ b/package/options.html
@@ -40,6 +40,7 @@
     </div>
     <div style="flex: 0 0 auto; align-items: flex-end; display: flex; margin: 1rem;">
       <button id="ok" class="i18n" title="ok" style="width: 5rem; height: 3rem;"></button>
+      <button id="saving" class="i18n" title="saving" style="width: 5rem; height: 3rem;"></button>
     </div>
   </div>
   <script src="options.js"></script>
